# sdxl-siglip

./: .gitignore  pyproject.toml  sample_siglip_infer.py  train_baseline.py
scripts/: remote_kill.sh  remote_tail.sh  remote_train.sh  smoke_test_save.py
utils/: adapter_io.py
