[project]
name = "sdxl-siglip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "diffusers>=0.35.1",
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "wandb>=0.21.4",
    "webdataset>=1.0.2",
]
